--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -47,6 +47,11 @@
   outline: none;
 }
 
+.third-page-checkbox {
+  width: 20px;
+  height: 20px;
+}
+
 .red-checkbox {
   accent-color: #af5555;
 }
