--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -37,7 +37,9 @@
   box-shadow: 0 0 0 3px rgba(63, 131, 255, 0.18);
   border-color: #3f83ff;
 }
-
+.spell-row {
+  font-size: 13px;
+}
 .checkbox {
   width: 15px;
   height: 15px;
