--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -63,7 +63,7 @@
   border-color: #3f83ff;
 }
 
-input[type=checkbox][disabled] {
+input[type='checkbox'][disabled] {
   outline: 2px solid red;
   background: transparent;
   accent-color: red;
