tabs for character sheet

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@
   @include mat.tabs-overrides((
     active-focus-indicator-color: rgb(168, 58, 58),
     active-indicator-height: 3px,
-    label-text-font: 'Mikadan',
+    label-text-font: 'sans-serif',
   ));
 }
 
