new character group sheets

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@
     active-focus-indicator-color: rgb(168, 58, 58),
     active-indicator-height: 5px,
     label-text-font: 'sans-serif',
+    label-text-weight: bold
   ));
 }
 
