--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -110,3 +110,13 @@ input[type='checkbox'][disabled] {
 .spell-slot-black-priest {
   accent-color: #af5555;
 }
+.small-info-icon {
+  font-size: 15px;
+  width: 15px;
+  height: 15px;
+}
+.small-info-button-icon {
+  width: 20px;
+  height: 20px;
+  padding: 2px 0 0 0;
+}
