--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,3 +75,44 @@
   );
 
 }
+
+/* scrollbar */
+::-webkit-scrollbar {
+  height: 14px;
+  width: 18px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  background: #6c9fbf;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+
+  &:hover {
+    background-color: #6c9fbf;
+  }
+
+  &:active {
+    background-color: #62b3e5;
+  }
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  background: #555;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+
+  &:hover {
+    background-color: #444;
+    border-width: 2px;
+  }
+
+  &:active {
+    background-color: #222;
+  }
+}
+
+::-webkit-scrollbar-track {
+  background-clip: padding-box;
+  background-color: #333;
+  border: 3px solid transparent;
+}
