styling and wallpaper

--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -33,8 +33,8 @@
 }
 
 .field:focus {
-  box-shadow: 0 0 0 3px rgba(63, 131, 255, 0.18);
-  border-color: #3f83ff;
+  box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.25);
+  border-color: red;
 }
 .spell-row {
   font-size: 13px;
