--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
   --mat-sys-on-primary: rgb(168, 58, 58);
 
   font-family: sans-serif;
+  scroll-behavior: smooth;
 
   textarea {
     font-family: sans-serif;
@@ -84,16 +85,16 @@
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-  background: #6c9fbf;
+  background: #555;
   background-clip: padding-box;
   border: 4px solid transparent;
 
   &:hover {
-    background-color: #6c9fbf;
+    background-color: #444;
   }
 
   &:active {
-    background-color: #62b3e5;
+    background-color: #222;
   }
 }
 
