--- a/libs/character-sheet/feature/src/lib/character-sheet.component.scss
+++ b/libs/character-sheet/feature/src/lib/character-sheet.component.scss
@@ -49,6 +49,12 @@
   padding: 6px 2px;
 }
 
+.no-pb {
+  padding-top: 11px;
+  padding-bottom: -2px;
+  border: 0;
+}
+
 .checkbox {
   width: 15px;
   height: 15px;
